system/argocd/resources/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    haproxy.org/ssl-redirect: "true"

spec:
  ingressClassName: haproxy
  rules:
    - host: materia.ggrel.net
      http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
  tls: {}
