system/argocd/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    haproxy.org/ssl-redirect: "true"
    #haproxy.org/ssl-passthrough: "true"
    haproxy.org/path-rewrite: /argocd/(.*) /\1

spec:
  ingressClassName: haproxy
  rules:
    - host: materia.ggrel.net
      http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
