system/argocd/resources/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-application-controller-egress
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: argocd-application-controller
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
            k8s:app.kubernetes.io/name: argocd-redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
            k8s:app.kubernetes.io/name: argocd-repo-server
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-applicationset-controller-egress
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: argocd-applicationset-controller
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
            k8s:app.kubernetes.io/name: argocd-repo-server
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-server-egress
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: argocd-server
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
            k8s:app.kubernetes.io/name: argocd-redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
            k8s:app.kubernetes.io/name: argocd-repo-server
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: haproxy-controller
            k8s:app.kubernetes.io/name: kubernetes-ingress
            k8s:app.kubernetes.io/instance: haproxy-ingress
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-repo-server-egress
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: argocd-repo-server
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
            k8s:app.kubernetes.io/name: argocd-redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-notifications-controller-egress
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: argocd-notifications-controller
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: '*'
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
            k8s:app.kubernetes.io/name: argocd-repo-server
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
    - toFQDNs:
        - matchName: api.github.com
        - matchName: discord.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
